[build-system]
requires = [
    "setuptools>=61.0",
    "tomlkit",
]
build-backend = "pep508_url_version_backend"
backend-path = [
    ".",
]

[project]
name = "boottool"
version = "1!0.0.1784693486"
description = "Manages boot configuration"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
license = "ISC"
dependencies = []
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/boottool"

[project.scripts]
boottool = "boottool.boottool:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
boottool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=1!0.0.1784688182", "click-auto-help>=1!0.0.1784680961", "clicktool>=1!0.0.1784687819", "compile-kernel>=1!0.0.1784692023", "eprint>=1!0.0.1784682565", "globalverbose>=1!0.0.1784686617", "pathtool>=1!0.0.1784691960", "timestamptool>=1!0.0.1784691699", "warntool>=1!0.0.1784690580", "filetool>=1!0.0.1784693484"]
dependencies-git = [
    "asserttool @ git+https://git@github.com/jakeogh/asserttool",
    "click-auto-help @ git+https://git@github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://git@github.com/jakeogh/clicktool",
    "compile-kernel @ git+https://git@github.com/jakeogh/compile-kernel",
    "devicelabeltool @ git+https://git@github.com/jakeogh/devicelabeltool",
    "devicetool @ git+https://git@github.com/jakeogh/devicetool",
    "eprint @ git+https://git@github.com/jakeogh/eprint",
    "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",
    "mounttool @ git+https://git@github.com/jakeogh/mounttool",
    "pathtool @ git+https://git@github.com/jakeogh/pathtool",
    "portagetool @ git+https://git@github.com/jakeogh/portagetool",
    "hs @ git+https://git@github.com/jakeogh/hs",
    "timestamptool @ git+https://git@github.com/jakeogh/timestamptool",
    "warntool @ git+https://git@github.com/jakeogh/warntool",
    "filetool @ git+https://git@github.com/jakeogh/filetool",
]
index-urls = [
    "jakeogh.github.io",
    "pip-index",
]
